fixed Jewlry Nav bar
it was too big of word spacing

--- a/jewls_styles.css
+++ b/jewls_styles.css
@@ -42,7 +42,7 @@ div.bar{
     margin-right: auto;
     padding-top: 10px;
     padding-bottom: 15px;
-    word-spacing: 65px;
+    word-spacing: 50px;
     font-size: 20px;
     position: fixed; 
     top: 0;   
